--- a/concierto/repository/pom.xml
+++ b/concierto/repository/pom.xml
@@ -1,14 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.escom.spring</groupId>
-    <artifactId>concierto</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>repository</artifactId>
-  <name>repository</name>
-  
-  	<properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.escom.spring</groupId>
+		<artifactId>concierto</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>repository</artifactId>
+	<name>repository</name>
+
+	<properties>
 		<spring-framework.version>4.0.2.RELEASE</spring-framework.version>
 	</properties>
 
@@ -25,6 +26,12 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.3-1101-jdbc41</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 
 		<!-- Proyectos -->
 		<dependency>
@@ -38,5 +45,5 @@
 			<version>2.1.2</version>
 		</dependency>
 	</dependencies>
-  
+
 </project>
